--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avi.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Abuka Nshunju</a></h1>
+					<h1 id="logo"><a href="#one">Abuka Nshunju</a></h1>
 					<p>I am a self-taught web developer<br />
 					who loves Javascript</p>
 				</header>
@@ -60,7 +60,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>With the vast amount of information available from the internet, I have managed to learn quite a decent amount of new skills as well.</p>
+									<p>With the vast amount of information available on the internet, I have managed to learn quite a decent amount of new skills as well.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Front-end Javascript Developer</li>
 										<li class="fa-cubes">Database Management</li>
@@ -75,7 +75,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>My Few Accomplishments</h3>
 									<p>Below are some of the projects I have worked on. You can clearly see some of them aren't very appealing but hey, a journey of a thousand miles begins with a single step. You can click the images to view them.</p>
 									<div class="features">
 										<article>
